fix list group in popover on mobile having rounded edges

--- a/components/list-group/list-group.styl
+++ b/components/list-group/list-group.styl
@@ -141,6 +141,7 @@ $list-group-drag-handle-width = 20px
 		border-color: $gray-lighter
 		border-left: 0
 		border-right: 0
+		border-radius: 0 !important
 
 /**
  * Dark list groups
